# llmcommit

./: .gitignore  README.md  conftest.py  index.html  objects.inv  pyproject.toml
api/: index.html
customization/: index.html
demo/: app.py  run.sh
docs/: customization.md  getting-started.md  step-by-step-guide.md
future-features-contributions/: index.html
getting-started/: index.html
search/: search_index.json
src/blueprint/: __init__.py  __main__.py  ai_service.py  cli.py  commit_generator.py
step-by-step-guide/: index.html
tests/unit/: test_commit_generator.py
